[package]
name = "pwm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
clap = { version = "4.5.4", features = ["derive"] }
rpassword = "7.3.1"
anyhow = "1.0.81"
argon2 = "0.5.3"
hex = "0.4.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-gcm-siv = "0.11.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
rand_core = "0.6.4"
